--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </h1>
       </div> 
       <div class="stand">
-        Stand 03.2024
+        Stand 03.2024, noch unfertig
         </div>
 
         <footer>
@@ -68,7 +68,7 @@
             </ul>
             <ul class="menu">
               <li><a href="index.html">@ Nicola La Caprara</a></li>
-              <li><a href="impressum.html">Impressum</a></li>
+              <li><a href="Impressum.html">Impressum</a></li>
             </ul>
         </footer>
           
