--- a/produkte.html
+++ b/produkte.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="n-t.css">
     <link rel="stylesheet" href="c-t.css">
     <link rel="stylesheet" href="stand.css">
+    <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="images/images.css">
   
 </head>
@@ -40,8 +41,8 @@
      
       <div class="explain"><a href="https://arbeitshelfer.surge.sh/" target="_blank"><img src="images/phone.png"></img></a>
             Arbeitshelfer App: <br>
-            Das ist meine erste App, eine PWA App für Notiten und Arbeitsanweisungen.
-            2023 mit Software Programmieren begonnen. Ende 2023 diese App entwickelt. Was kann mna damit machen? <br>
+            Das ist meine erste App, eine PWA App für Notizen und Arbeitsanweisungen.
+            2023 habe ich mit Software Programmieren begonnen. Ende 2023 diese App entwickelt. Was kann man damit machen? <br>
             Wozu ist diese App entwickelt worden?  <br>
             Es ist eine PWA. Funktioniert daher auch offline und kann auf jedes Gerät installiert werden, vom PC, MAC, Linux bis zum Android und iOS Smartphone. 
             Ist aber von mir für Smartphone optimiert worden.
@@ -77,7 +78,7 @@ wie eine Webseite einfach ausprobieren, natürlich völlig kostenlos.
         </ul>
         <ul class="menu">
           <li><a href="index.html">@ Nicola La Caprara</a></li>
-          <li><a href="impressum.html">Impressum</a></li>
+          <li><a href="Impressum.html">Impressum</a></li>
         </ul>
     </footer>
       
