--- a/kontakt.html
+++ b/kontakt.html
@@ -155,7 +155,7 @@
     </style>
 
     <div class="stand">
-        Stand 03.2024
+        Stand 03.2024, noch unfertig
     </div>
 
     <footer>
@@ -173,7 +173,7 @@
           </ul>
           <ul class="menu">
             <li><a href="index.html">@ Nicola La Caprara</a></li>
-            <li><a href="impressum.html">Impressum</a></li>
+            <li><a href="Impressum.html">Impressum</a></li>
           </ul>
       </footer>
         
