--- a/übermich.html
+++ b/übermich.html
@@ -90,7 +90,7 @@
       <div class="puffer"></div>
       
       <div class="stand">
-        Stand 03.2024
+        Stand 03.2024, noch unfertig
         </div>
 
         <footer>
@@ -108,7 +108,7 @@
             </ul>
             <ul class="menu">
               <li><a href="index.html">@ Nicola La Caprara</a></li>
-              <li><a href="impressum.html">Impressum</a></li>
+              <li><a href="Impressum.html">Impressum</a></li>
             </ul>
         </footer>
           
