--- a/übermich.html
+++ b/übermich.html
@@ -45,7 +45,7 @@
         <br>
         <div><a href="https://www.stuttgarter-nachrichten.de/inhalt.ungewoehnliche-plakataktion-in-stuttgart-ich-will-die-politiker-wachruetteln.f4c232dc-ec93-416e-aa29-cc5214b77d47.html"> 
         <img src="aktion.png" class="image"></a>
-        <h3> Aufgrund meines ganz speziellen, einzigartigen Charakters, habe ich schon als kleines Kind enorme Schwierigkeiten 
+        <h3> Aufgrund meines ganz speziellen, einzigartigen Charakter, habe ich schon als kleines Kind enorme Schwierigkeiten 
           in dieser Welt gehabt. Deshalb war und bin ich eigentlich auch sehr zurückgezogen. 
           Da ich doch aufgrund meines natürlichen Verlangen nach Verpflegung, einer Bleibe und andere Grundbedürfnisse gezwungen war
           mit der Außenwelt zu interagieren, lernte ich sehr früh auf was für Probleme man stoßen kann. Und das Problem der immer schlimmer werdenden Wohnungsnot, 
