--- a/produkte.html
+++ b/produkte.html
@@ -41,16 +41,18 @@
      
       <div class="explain"><a href="https://arbeitshelfer.surge.sh/" target="_blank"><img src="images/phone.png"></img></a>
             Arbeitshelfer App: <br>
-            Das ist meine erste App, eine PWA App für Notizen und Arbeitsanweisungen.
-            2023 habe ich mit Software Programmieren begonnen. Ende 2023 diese App entwickelt. Was kann man damit machen? <br>
+            Das war meine erste App, eine PWA-App für Notizen und Arbeitsanweisungen.
+             <br>
             Wozu ist diese App entwickelt worden?  <br>
             Es ist eine PWA. Funktioniert daher auch offline und kann auf jedes Gerät installiert werden, vom PC, MAC, Linux bis zum Android und iOS Smartphone. 
-            Ist aber von mir für Smartphone optimiert worden.
-Basiert auf eine Webseite, und kann daher vom Besitzer des Quellcodes und Servers sehr leicht aktualisiert werden, 
-und die Aktualisierung kommt beim Nutzer automatisch ohne Zutun an, sobald der Nutzer Internet oder Intranet Zugang hat.
+            Ist aber von mir für Smartphone optimiert worden. <br>
+
 Die App hat 2 Hauptfunktionen: <br>
-1.	Je nach Abteilung und Bereich kann man die Arbeitsanweisungen (Z.B. Lagerbewegungen über SAP) lesen und Schritt für Schritt nachmachen, 
-bis man sie auswendig kann. <br>
+1.	Stellt euch mal vor, Ihr kommt in einem neuen Büro rein und dort wird euch ein ganzes Ordner mit Schritt für Schritt Arbeits-Anleitungen mit Fotos übergeben, 
+damit Ihr deutlich leichter eingelernt werden könnt. Nun kommt zum nächsten Schritt und stellt Euch diesen Ordner als App vor! <br>
+Je nach Abteilung und Bereich kann man die Arbeitsanweisungen (Z.B. Lagerbewegungen über SAP) lesen und Schritt für Schritt nachmachen, 
+bis man sie auswendig kann. Basiert auf eine Webseite, und kann daher vom Besitzer des Quellcodes und Servers sehr leicht aktualisiert werden, 
+und die Aktualisierung kommt beim Nutzer automatisch ohne Zutun an, sobald der Nutzer Internet oder Intranet Zugang hat.<br>
 2.	Man kann sich in eigenen Worten eigene Notizen zur Unterstützung erstellen. Die Notizen dann über Suchverzeichnis suchen, abändern, löschen oder per Back-up absichern.
 Das erleichtert das Einlernen, führt zu weniger Verzögerungen und Fehler, und ist auch eine Hilfe für Menschen die allgemein weiterkommen wollen. <br>
 Unter <a href="https://arbeitshelfer.surge.sh/" target="_blank" style="color: var(--clr-neon)";>Arbeitshelfer App</a>, kann man meine App am besten mit dem Chrome-Browser herunterladen oder online
