--- a/produkte.html
+++ b/produkte.html
@@ -207,11 +207,11 @@
                   <div class="slide-image slider-link next"><img src="images/anl2/13.png"></div>
                       <div class="slide-content">
                           <div class="slide-text"> Zum Abschluss die letzten 2 Menüfelder. <br>
-                            Das Kontakt-Menüfeld befindet sich nur in der Präsentations-Version der App. Um mich nach Außen zu präsentieren
+                            Das Kontakt-Menüfeld befindet sich nur in der Präsentations-Version der App wieder. Um mich nach Außen zu präsentieren
                             und leichter in Kontakt zu kommen. Die eigentliche Version für den Arbeitsplatz hat diese Funktion nicht. <br>
-                            Der Clou, die Schlüsselfunktion dieser App, präsentiere ich genauer nur nach Anfrage möglicher Arbeitgeber. <br>
+                            Der Clou, also die Schlüsselfunktion dieser App, präsentiere ich genauer nur nach Anfrage möglicher Arbeitgeber. <br>
                             Die Schlüsselfunktion kann vom Arbeiter oder Privatnutzer sowieso nicht verwendet werden, wenn der Arbeitgeber
-                            sich nicht mit mir abspricht. <br> Die Schlüsselfunktion, sowie auch der Rest der App, können belieb von mir nach Absprache 
+                            sich nicht mit mir abspricht. <br> Die Schlüsselfunktion, sowie auch der Rest der App, können beliebig oft von mir nach Absprache 
                             eines interessierten Arbeitgeber in Dartsellung und Funktionsumfang erweitert und verfeinert werden. 
                           </div>
                       </div>
