images.css update

--- a/produkte.html
+++ b/produkte.html
@@ -2,20 +2,22 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="Nicola La Caprara" content="Präsentations-Webseite">
+    <meta name="HandheldFriendly" content="true">
+    <meta name="MobileOptimized" content="width">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>nico-dev</title>
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="box.css">
     <link rel="stylesheet" href="button.css">
     <link rel="stylesheet" href="n-t.css">
     <link rel="stylesheet" href="c-t.css">
-    <link rel="stylesheet" href="stand.css">
     <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="images/images.css">
     
-  
 </head>
 <body>
       <div class="box"> 
@@ -178,7 +180,7 @@
                 <div class="slide flex">
                   <div class="slide-image slider-link next"><img src="images/anl2/11.png"></div>
                       <div class="slide-content">
-                          <div class="slide-text">Auf dieser Seite der App befindet sich Absicherungsfunktion. <br>
+                          <div class="slide-text">Auf dieser Seite der App befindet sich die Absicherungsfunktion. <br>
                             Hier kann man alle geschriebenen Notizen (nur zusammen) in einem Ordner außerhalb der App abspeichern
                             und somit Back-ups erstellen. <br>
                             Weitere Hintergründe sind in der App zu lesen. Man kann die als Json-Datei abgespeicherten Notizen beliebig beschriften
@@ -244,5 +246,5 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="main.js"></script>
-</body>
+ </body>
 </html>
