--- a/produkte.html
+++ b/produkte.html
@@ -220,7 +220,7 @@
                 </div>
 
         </div>
-              
+        <div class="puffer"></div>     
               
 
     <footer>
