active navbar upd

--- a/kontakt.html
+++ b/kontakt.html
@@ -36,7 +36,7 @@
                     <a href="index.html" class="neon-button">Home</a>
                     <a href="produkte.html" class="neon-button">Produkte</a>
                     <a href="übermich.html" class="neon-button">Über mich</a>
-                    <a href="kontakt.html" class="neon-button">Kontakt</a>
+                    <a class="active" href="kontakt.html" class="neon-button">Kontakt</a>
                 </ul>
             </div>
         </span>
