--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="Nicola La Caprara" content="Präsentations-Webseite">
+    <meta name="HandheldFriendly" content="true">
+    <meta name="MobileOptimized" content="width">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>nico-dev</title>
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="box.css">
@@ -28,7 +32,7 @@
               </div>
             <div class="button-container">
               <ul>
-                <a href="index.html" class="neon-button">Home</a>
+                <a class="active" href="index.html" class="neon-button">Home</a>
                 <a href="produkte.html" class="neon-button">Produkte</a>
                 <a href="übermich.html" class="neon-button">Über mich</a>
                 <a href="kontakt.html" class="neon-button">Kontakt</a> 
