--- a/produkte.html
+++ b/produkte.html
@@ -34,7 +34,7 @@
             <div class="button-container">
               <ul>
                 <a href="index.html" class="neon-button">Home</a>
-                <a href="produkte.html" class="neon-button">Produkte</a>
+                <a class="active" href="produkte.html" class="neon-button">Produkte</a>
                 <a href="übermich.html" class="neon-button">Über mich</a>
                 <a href="kontakt.html" class="neon-button">Kontakt</a> 
                 </ul> 
