--- a/übermich.html
+++ b/übermich.html
@@ -31,7 +31,7 @@
               <ul>
                 <a href="index.html" class="neon-button">Home</a>
                 <a href="produkte.html" class="neon-button">Produkte</a>
-                <a href="übermich.html" class="neon-button">Über mich</a>
+                <a class="active" href="übermich.html" class="neon-button">Über mich</a>
                 <a href="kontakt.html" class="neon-button">Kontakt</a> 
                 </ul> 
             </div>
