--- a/übermich.html
+++ b/übermich.html
@@ -38,7 +38,7 @@
           </span>
       </div>
       <div class="about"><h1>Über mich</h1>
-        <h2 style="letter-spacing: 0.6px;">Ich habe einen Traum: Dass die Würde und individuelle Entfaltungsmöglichkeit des Einzelnen das höchste Gut auf Erden sein wird. Ich bin zu 100% open mindet!
+        <h2 style="word-spacing: normal;">Ich habe einen Traum: Dass die Würde und individuelle Entfaltungsmöglichkeit des Einzelnen das höchste Gut auf Erden sein wird. Ich bin zu 100% open mindet!
         Links, Rechts, und alle anderen oberflächlichen Begriffe passen zu mir nicht. Bin hochsensibel, sehr feinfühlig und deshalb auch sehr zurückgezogen.
         Wichtige Sachen versuche ich aus der 360grad Perspektive zu analysieren. Und wenn ich denke, das Unrecht sei zu groß, gehe ich manchmal auch alleine dagegen an. 
         Hier ein Interview der Stuttgarter Zeitung über mich:</h2>  
@@ -67,9 +67,13 @@
           bekannt gemacht habe: <br>
           Plug & Play Container-Wohnungen für Alle !!! <br>
           Politiker und andere Verantwortliche sagen einfach immer wieder, es gebe nicht genügend Geld, Zeit und Platz für Sozialwohnungen. <br> 
-          Aber meine modernen gut gedämmten Plug & Play Container-Wohnungen können viel schneller und kostengünstiger gebaut werden, und nehmen auch weniger Platz
-          weg. Sie können vorgefertigt in Fabriken stehen und dann sobald sie gebraucht werden, da wo vorgefertigte Anschlüsse stehen oder wo schon 
+          Aber meine modernen gut gedämmten, schön aussehenden Plug & Play Container-Wohnungen können viel schneller und kostengünstiger gebaut werden, 
+          und nehmen auch weniger Platz weg. Sie können vorgefertigt in Fabriken stehen und dann sobald sie gebraucht werden, 
+          da wo vorgefertigte Anschlüsse stehen oder wo schon 
           andere vorgefertigte Container-Wohnungen stehen einfach draufgesetzt werden!
+          An- und Abwasseranschlüsse sowie Stromanschlüsse können an allen vier Seiten gesetzt werden, sodass auch nebeneinader Container-Wohnungen
+          gestellt werden können und genügend Platz auch für Familien garantiert werden kann. Die Container können mit modularen Bausteinen zusammen gelegt werden
+          und können somit leicht repariert/erneuert werden. Somit bieten solche "Plug & Play Container-Wohnungen" auch eine potenziell sehr hohe Langlebigkeit.
         </h3><br>
         <h3>Wie kann man die Würde des Menschen, welche im Grundgesetzt verankert ist, überhaupt beachten, wenn nicht einmal eine sehr bescheidene,
           sehr kleine Wohnung 
