--- a/kontakt.html
+++ b/kontakt.html
@@ -46,8 +46,8 @@
         <h1 class="content">
           Was ich mir für Kontakte wünsche?
             <ol>
-                <li><span>Jegliches Lob und konstruktive Kritik</span></li>
-                <li><span>Kontakte zu Medien und Unternehmen</span></li>
+                <li><span>Jegliches Lob & konstruktive Kritik</span></li>
+                <li><span>Mit Medien, Unternehmen & Gleichgesinnte</span></li>
                 
                 <li><span>Aller tiefsten Fragen des Seins zu lüften</span></li>
             </ol>
@@ -155,7 +155,7 @@
     </style>
 
     <div class="stand">
-        Stand 03.2024, noch unfertig
+        Stand 04.2024, noch unfertig
     </div>
 
     <footer>
