--- a/übermich.html
+++ b/übermich.html
@@ -39,7 +39,7 @@
       </div>
       <div class="about"><h1>Über mich</h1>
         <h2 style="word-spacing: normal;">Ich habe einen Traum: Dass die Würde und individuelle Entfaltungsmöglichkeit des Einzelnen das höchste Gut auf Erden sein wird. Ich bin zu 100% open mindet!
-        Links, Rechts, und alle anderen oberflächlichen Begriffe passen zu mir nicht. Bin hochsensibel, sehr feinfühlig und deshalb auch sehr zurückgezogen.
+        Links, Rechts, und alle ähnliche Begriffe passen zu mir nicht. Bin hochsensibel, sehr feinfühlig und deshalb auch sehr zurückgezogen.
         Wichtige Sachen versuche ich aus der 360grad Perspektive zu analysieren. Und wenn ich denke, das Unrecht sei zu groß, gehe ich manchmal auch alleine dagegen an. 
         Hier ein Interview der Stuttgarter Zeitung über mich:</h2>  
         <br>
@@ -57,11 +57,12 @@
           Die Gründe wieso man in dieser Gesellschaft obdachlos wird sind vielseitig. Ich habe mit vielen Obdachlosen gesprochen
           und ein Drittel der Obdachlosen scheinen Menschen zu sein, die auch wie ich überhaupt nicht faul oder drogensüchtig sind. Aber abgesehen davon, 
           niemand, absolut niemand darf obdachlos werden, außer derjenige will es selbst. <br>
-          Ich bin mittlerweile selbst Vermieter, Stand 03.2024: <br>
+          Ich bin mittlerweile selbst Vermieter, Stand 04.2024: <br>
           Ich kenne die Perspektive der Vermieter auch sehr gut. Und ich kenne die Perspektive von Wohnungssuchenden bis Obdachlosen und die damit 
           verbundenen Existenzängste. Es wäre ein
           Traum, wenn Menschen aus der Bevölkerung heraus, die keiner Partei zugehören, aber aufgrund ihrer praktischen Kenntnisse und Erfahrungen
-          mit einem echten demokratischen System per Direktwahlen gewählt werden könnten und diesen Posten erhalten könnten!
+          mit einem echten demokratischen System per Direktwahlen gewählt werden könnten und diesen Posten erhalten könnten, um die Politik im Sinne der Bevölkerung
+          zu verbessern!
           </h3> <br>
           <h3 style="color:rgb(86, 219, 86); letter-spacing: 0.6px";>Mein Lösungsvorschlag gegen die Wohnungsnot, den ich das erste Mal auf einer Montagsdemo in Reutlingen am 08.01.2024 
           bekannt gemacht habe: <br>
@@ -72,7 +73,7 @@
           da wo vorgefertigte Anschlüsse stehen oder wo schon 
           andere vorgefertigte Container-Wohnungen stehen einfach draufgesetzt werden!
           An- und Abwasseranschlüsse sowie Stromanschlüsse können an allen vier Seiten gesetzt werden, sodass auch nebeneinader Container-Wohnungen
-          gestellt werden können und genügend Platz auch für Familien garantiert werden kann. Die Container können mit modularen Bausteinen zusammen gelegt werden
+          zusammengestellt werden können und genügend Platz auch für Familien garantiert werden kann. Die Container können mit modularen Bausteinen zusammengebaut werden
           und können somit leicht repariert/erneuert werden. Somit bieten solche "Plug & Play Container-Wohnungen" auch eine potenziell sehr hohe Langlebigkeit.
         </h3><br>
         <h3>Wie kann man die Würde des Menschen, welche im Grundgesetzt verankert ist, überhaupt beachten, wenn nicht einmal eine sehr bescheidene,
@@ -93,10 +94,6 @@
       
       <div class="puffer"></div>
       
-      <div class="stand">
-        Stand 03.2024, noch unfertig
-        </div>
-
         <footer>
           <div class="waves">
             <div class="wave" id="wave1"></div>
