--- a/übermich.html
+++ b/übermich.html
@@ -38,8 +38,8 @@
           </span>
       </div>
       <div class="about"><h1>Über mich</h1>
-        <h2 style="word-spacing: normal;">Ich habe einen Traum: Dass die Würde und individuelle Entfaltungsmöglichkeit des Einzelnen das höchste Gut auf Erden sein wird. Ich bin zu 100% open mindet!
-        Links, Rechts, und alle ähnliche Begriffe passen zu mir nicht. Bin hochsensibel, sehr feinfühlig und deshalb auch sehr zurückgezogen.
+        <h2 style="word-spacing: normal;">Ich habe einen Traum: Dass die Würde und individuelle Entfaltungsmöglichkeit des Einzelnen das höchste Gut auf Erden sein wird. 
+        Ich bin zu 100% open mindet! Links, Rechts, und alle ähnlichen Begriffe passen zu mir nicht. Bin hochsensibel, sehr feinfühlig und deshalb auch sehr zurückgezogen.
         Wichtige Sachen versuche ich aus der 360grad Perspektive zu analysieren. Und wenn ich denke, das Unrecht sei zu groß, gehe ich manchmal auch alleine dagegen an. 
         Hier ein Interview der Stuttgarter Zeitung über mich:</h2>  
         <br>
