--- a/kontakt.html
+++ b/kontakt.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="n-t.css">
     <link rel="stylesheet" href="c-t.css">
     <link rel="stylesheet" href="stand.css">
-
+    <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="c-t-k.css"> <!-- CSS nur für die Kontakt Seite -->
   
 </head>
@@ -152,6 +152,7 @@
             }
         }
     </style>
+    <div class="puffer"></div>
 
     <div class="stand">
         Stand 04.2024, noch unfertig
