--- a/produkte.html
+++ b/produkte.html
@@ -60,8 +60,9 @@
             2.	Man kann sich in eigenen Worten eigene Notizen zur Unterstützung erstellen. Die Notizen dann über Suchverzeichnis suchen, abändern, löschen oder per Back-up absichern.
             Das erleichtert das Einlernen, führt zu weniger Verzögerungen und Fehler, und ist auch eine Hilfe für Menschen die allgemein weiterkommen wollen. <br>
             <br>
-            Unter <a href="https://arbeitshelfer.surge.sh/" target="_blank" style="color: var(--clr-neon)";>Arbeitshelfer App</a>, kann man meine App am besten mit dem Chrome-Browser herunterladen oder online
-            wie eine Webseite einfach ausprobieren, natürlich völlig kostenlos. </div>
+            Unter <a href="https://arbeitshelfer.surge.sh/" target="_blank" style="color: var(--clr-neon)";>Arbeitshelfer App</a>, kann man meine App am besten mit
+            dem Chrome-Browser installieren oder online
+            wie eine Webseite einfach ausprobieren. </div>
                   </div>	
                 </div>
                 <div class="slide flex">
@@ -211,10 +212,11 @@
                           <div class="slide-text"> Zum Abschluss die letzten 2 Menüfelder. <br>
                             Das Kontakt-Menüfeld befindet sich nur in der Präsentations-Version der App wieder. Um mich nach Außen zu präsentieren
                             und leichter in Kontakt zu kommen. Die eigentliche Version für den Arbeitsplatz hat diese Funktion nicht. <br>
-                            Der Clou, also die Schlüsselfunktion dieser App, präsentiere ich genauer nur nach Anfrage möglicher Arbeitgeber. <br>
-                            Die Schlüsselfunktion kann vom Arbeiter oder Privatnutzer sowieso nicht verwendet werden, wenn der Arbeitgeber
+                            Der Clou, also die Schlüsselfunktion dieser App, präsentiere ich genauer nur nach Anfrage möglicher Arbeitgeber, 
+                            somit wird dieser Bereich für den normalen Nutzer nur eine offene Baustelle darstellen können. <br>
+                            Die Schlüsselfunktion kann vom Arbeiter oder Privatnutzer somit nicht verwendet werden, wenn der Arbeitgeber
                             sich nicht mit mir abspricht. <br> Die Schlüsselfunktion, sowie auch der Rest der App, können beliebig oft von mir nach Absprache 
-                            eines interessierten Arbeitgeber in Dartsellung und Funktionsumfang erweitert und verfeinert werden. 
+                            eines interessierten Arbeitgeber in Darstellung und Funktionsumfang erweitert und verfeinert werden. 
                           </div>
                       </div>
                 </div>
