--- a/produkte.html
+++ b/produkte.html
@@ -82,7 +82,7 @@
                 <div class="slide flex">
                   <div class="slide-image slider-link next"><img src="images/anl1/2.gif"></div>
                   <div class="slide-content">
-                    <div class="slide-text"> Man kann die App als Progressive Web App (PWA) herunterladen, 
+                    <div class="slide-text"> Man kann die App als Progressive Web App (PWA) installieren, 
                       indem man hier wo die 3 Punkte sind drauf klickt und am besten mit dem Chrome-Browser ins Internet geht. <br>
                       Oder man kann sie auch ganz normal online wie eine Webseite ausprobieren. <br> 
                       Fast alles funktioniert gleich, auch das Abspeichern von Notizen. Lediglich eine ständige Internetverbindung muss gewehrleistet sein.
