--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="button.css">
     <link rel="stylesheet" href="n-t.css">
     <link rel="stylesheet" href="c-t.css">
-    <link rel="stylesheet" href="stand.css">
+    <link rel="stylesheet" href="aura.css">
   
 </head>
 <body>
@@ -53,9 +53,23 @@
                 </ol>
             </h1>
       </div> 
-      <div class="stand">
-        Stand 04.2024, noch unfertig
-        </div>
+      <div class="aura">
+          <div class="box-aura">
+             <img src="images/aura/Depression.png">
+          </div>
+          <div class="box-aura">
+             <img src="images/aura/Traurigkeit.png">
+          </div>
+          <div class="box-aura">
+             <img src="images/aura/neutral.png">
+          </div>
+          <div class="box-aura">
+             <img src="images/aura/Liebe.png">
+          </div>
+          <div class="box-aura">
+             <img src="images/aura/Glück.png">
+          </div>
+      </div>
 
         <footer>
           <div class="waves">
