--- a/übermich.html
+++ b/übermich.html
@@ -78,7 +78,7 @@
         </h3><br>
         <h3>Wie kann man die Würde des Menschen, welche im Grundgesetzt verankert ist, überhaupt beachten, wenn nicht einmal eine sehr bescheidene,
           sehr kleine Wohnung 
-          garantiert ist? "Plug & Play Container-Wohnungen für Alle" muss zu einem Gesetz werden. &#10084; <!-- This will display a heart symbol: ❤ -->
+          garantiert ist? "Plug & Play Container-Wohnungen für Alle" sollte zu einem Gesetz werden. &#10084; <!-- This will display a heart symbol: ❤ -->
           <br> 
         </h3>
         </div>
