--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
             <div class="wave" id="wave4"></div>
           </div>
           <ul class="social_icon">
-              <li><a href="https://github.com/NicolaLaCaprara" target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
-              <li><a href="https://www.linkedin.com/in/nicola-l%C3%A4-caprara-7a1b9a1b6/" target="_blank"> <ion-icon name="logo-linkedin"></ion-icon></a></li>
-              <li><a href="https://www.xing.com/profile/Nicola_La_Caprara/cv" target="_blank"><ion-icon name="logo-xing"></ion-icon></a></li>
+              <li><a href="https://x.com/lichtkrieger77" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a></li>
+              <li><a href="https://www.linkedin.com/in/nicola-la-caprara-b0345930a/?originalSubdomain=de" target="_blank"> <ion-icon name="logo-linkedin"></ion-icon></a></li>
+              <li><a href="https://www.xing.com/profile/Nicola_LaCaprara" target="_blank"><ion-icon name="logo-xing"></ion-icon></a></li>
               <li><a href="mailto:nico.atman@proton.me"><ion-icon name="mail-outline"></ion-icon></a></li>
             </ul>
             <ul class="menu">
