--- a/produkte.html
+++ b/produkte.html
@@ -52,7 +52,7 @@
                   <div class="slide-content">                   
                     <div class="slide-text">Eine Schritt für Schritt Vorführung meiner Arbeitshelfer App. <br>
                       Die App hat 2 Hauptfunktionen: <br>
-            1.	Stellt euch mal vor, Ihr kommt in einem neuen Büro rein und dort wird euch ein ganzes Ordner mit Schritt für Schritt Arbeits-Anleitungen mit Fotos übergeben, 
+            1.	Stellt euch mal vor, Ihr kommt in einem neuen Büro rein und dort wird euch ein Ordner mit Schrittweise Arbeits-Anleitungen und dazu Fotos übergeben, 
             damit Ihr deutlich leichter eingelernt werden könnt. Nun kommt zum nächsten Schritt und stellt Euch diesen Ordner als App vor! <br>
             Je nach Abteilung und Bereich kann man die Arbeitsanweisungen (z.B. Lagerbewegungen über SAP) lesen und Schritt für Schritt nachmachen, 
             bis man sie auswendig kann. Basiert auf eine Webseite, und kann daher vom Besitzer des Quellcodes und Servers sehr leicht aktualisiert werden, 
@@ -76,14 +76,14 @@
             Es ist eine PWA. Funktioniert daher auch offline und kann auf jedes Gerät installiert werden, vom PC, MAC, Linux bis zum Android und iOS Smartphones. 
             Ist aber von mir für Smartphones optimiert worden. <br> Zum Vergleich: Diese Webseite, welche mein folgendes Projekt nach der PWA-App darstellte, 
             ist z.B. 100% responsiv (passt sich jeder Bildschimrgröße an). 
-            Aber diese Webseite funktioniert nicht offline, da es sich um eine herkömmliche Webseite handelt und keine PWA-App ist. </div>                    
+            Aber diese Webseite funktioniert nicht offline, da es sich um eine herkömmliche Webseite handelt und keine PWA-App. </div>                    
                   </div>	
                 </div>	
                 <div class="slide flex">
                   <div class="slide-image slider-link next"><img src="images/anl1/2.gif"></div>
                   <div class="slide-content">
                     <div class="slide-text"> Man kann die App als Progressive Web App (PWA) installieren, 
-                      indem man hier wo die 3 Punkte sind drauf klickt und am besten mit dem Chrome-Browser ins Internet geht. <br>
+                      indem man hier wo die 3 Punkte sind, einfach drauf klickt, und am besten mit dem Chrome-Browser ins Internet geht. <br>
                       Oder man kann sie auch ganz normal online wie eine Webseite ausprobieren. <br> 
                       Fast alles funktioniert gleich, auch das Abspeichern von Notizen. Lediglich eine ständige Internetverbindung muss gewehrleistet sein.
                      </div>                    
