--- a/produkte.html
+++ b/produkte.html
@@ -52,7 +52,7 @@
                   <div class="slide-content">                   
                     <div class="slide-text">Eine Schritt für Schritt Vorführung meiner Arbeitshelfer App. <br>
                       Die App hat 2 Hauptfunktionen: <br>
-            1.	Stellt euch mal vor, Ihr kommt in einem neuen Büro rein und dort wird euch ein Ordner mit Schrittweise Arbeits-Anleitungen und dazu Fotos übergeben, 
+            1.	Stellt euch mal vor, Ihr kommt in ein neues Büro rein und dort wird euch ein Ordner mit Schrittweise Arbeits-Anleitungen und dazu Fotos übergeben, 
             damit Ihr deutlich leichter eingelernt werden könnt. Nun kommt zum nächsten Schritt und stellt Euch diesen Ordner als App vor! <br>
             Je nach Abteilung und Bereich kann man die Arbeitsanweisungen (z.B. Lagerbewegungen über SAP) lesen und Schritt für Schritt nachmachen, 
             bis man sie auswendig kann. Basiert auf eine Webseite, und kann daher vom Besitzer des Quellcodes und Servers sehr leicht aktualisiert werden, 
