--- a/übermich.html
+++ b/übermich.html
@@ -56,12 +56,14 @@
           Die Gründe wieso man in dieser Gesellschaft obdachlos wird sind vielseitig. Ich habe mit vielen Obdachlosen gesprochen
           und ein Drittel der Obdachlosen scheinen Menschen zu sein, die auch wie ich überhaupt nicht faul oder drogensüchtig sind. Aber abgesehen davon, 
           niemand, absolut niemand darf obdachlos werden, außer derjenige will es selbst. <br>
-          Ich bin mittlerweile selbst Vermieter, Stand 04.2024: <br>
+          Ich bin mittlerweile selbst Vermieter. <br>
           Ich kenne die Perspektive der Vermieter auch sehr gut. Und ich kenne die Perspektive von Wohnungssuchenden bis Obdachlosen und die damit 
-          verbundenen Existenzängste. Es wäre ein
-          Traum, wenn Menschen aus der Bevölkerung heraus, die keiner Partei zugehören, aber aufgrund ihrer praktischen Kenntnisse und Erfahrungen
-          mit einem echten demokratischen System per Direktwahlen gewählt werden könnten und diesen Posten erhalten könnten, um die Politik im Sinne der Bevölkerung
-          zu verbessern!
+          verbundenen Existenzängste. Deshalb bin ich umso mehr davon überzeugt, dass es eine würdevolle Notlösung für Wohnungssuchende geben muss. <br>
+          Ich musste selbst viele Menschen gleich abweisen, die sich auf ähnliche Weise, wie ich selbst bei der Wohnungssuche beworben haben. <br>
+          Im Moment gibt es nur Notunterkünfte, bei denen man die Zimmer mit anderen teilen muss. Diese Unterkünfte sind zeitlich begrenzt,
+          was für große Unsicherheit sorgt. Oder man landet direkt auf der Straße, auch weil manche Unterkünfte zu voll sind,
+          oder sehr stark stinken und man wird von anderen Obdachlosen beklaut usw.. <br>
+          Das hat nichts mit Würde zu tun!
           </h3> <br>
           <h3 style="color:rgb(86, 219, 86); letter-spacing: 0.6px";>Mein Lösungsvorschlag gegen die Wohnungsnot, den ich das erste Mal auf einer Montagsdemo in Reutlingen am 08.01.2024 
           bekannt gemacht habe: <br>
