--- a/produkte.html
+++ b/produkte.html
@@ -53,7 +53,7 @@
                     <div class="slide-text">Eine Schritt für Schritt Vorführung meiner Arbeitshelfer App. <br>
                       Die App hat 2 Hauptfunktionen: <br>
             1.	Man muss sich vorstellen, man kommt in ein neues Büro rein und dort bekommt man ein Ordner mit Schrittweise Arbeits-Anleitungen und dazu Fotos übergeben, 
-            damit man deutlich leichter eingelernt werden kann. Nun kommt der nächsten Schritt, wo man sich diesen Ordner als App vorstellen muss! <br>
+            damit man deutlich leichter eingelernt werden kann. Nun kommt der nächste Schritt, wo man sich diesen Ordner als App vorstellen muss! <br>
             Je nach Abteilung und Bereich kann man die Arbeitsanweisungen (z.B. Lagerbewegungen über SAP) lesen und Schritt für Schritt nachmachen, 
             bis man sie auswendig kann. Basiert auf eine Webseite, und kann daher vom Besitzer des Quellcodes und Servers sehr leicht aktualisiert werden, 
             und die Aktualisierung kommt beim Nutzer automatisch ohne Zutun an, sobald der Nutzer Internet oder Intranet Zugang hat. <br>
