--- a/Impressum.html
+++ b/Impressum.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="Nicola La Caprara" content="Präsentations-Webseite">
     <title>nico-dev</title>
-    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="base1.css">
     <link rel="stylesheet" href="box.css">
     <link rel="stylesheet" href="button.css">
     <link rel="stylesheet" href="n-t.css">
