--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>nico-dev</title>
-    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="base1.css">
     <link rel="stylesheet" href="box.css">
     <link rel="stylesheet" href="button.css">
     <link rel="stylesheet" href="n-t.css">
