--- a/produkte.html
+++ b/produkte.html
@@ -59,7 +59,6 @@
             und die Aktualisierung kommt beim Nutzer automatisch ohne Zutun an, sobald der Nutzer Internet oder Intranet Zugang hat. <br>
             2.	Man kann sich in eigenen Worten eigene Notizen zur Unterstützung erstellen. Die Notizen dann über Suchverzeichnis suchen, abändern, löschen oder per Back-up absichern.
             Das erleichtert das Einlernen, führt zu weniger Verzögerungen und Fehler, und ist auch eine Hilfe für Menschen die allgemein weiterkommen wollen. <br>
-            <br>
             Unter <a href="https://arbeitshelfer.surge.sh/" target="_blank" style="color: var(--clr-neon)";>Arbeitshelfer App</a>, kann man meine App am besten mit
             dem Chrome-Browser installieren oder online
             wie eine Webseite einfach ausprobieren. </div>
@@ -98,7 +97,8 @@
                     Falls man jedoch mit anderen Brwosern ins Internet geht, erscheint auch ein kleines Fenster bei dem dann z.B. die Option 
                     "Zum Startbildschirm hinzufügen" angezeigt wird. Einfach anklicken. <br>
                     Jeder Browser hat andere Eigenschaften. Über Firefox erscheint z.B. die Option "Installieren", ohne die Bezeichnung "App". Andere nutzen ähnliche Begriffe,
-                    wie "auf dem Bildschirm speichern". <br> Letzendlich führen alle Wege nach Rom. Kann es jedoch nicht garantieren, deshalb empfehle
+                    wie "auf dem Bildschirm speichern". <br> Beim iOS Browser Safari, zum Beispiel, installiert man die App über das Symbol der unteren 3 in der Mitte.
+                    Letzendlich führen alle Wege nach Rom. Kann es jedoch nicht garantieren, deshalb empfehle
                     ich für diesen Zweck den Chrome-Browser.
                   </div>                   
                   </div>	
