--- a/übermich.html
+++ b/übermich.html
@@ -37,7 +37,7 @@
           </span>
       </div>
       <div class="about"><h1>Über mich</h1>
-        <h2 style="word-spacing: normal;">Ich habe einen Traum: Dass die Würde und individuelle Entfaltungsmöglichkeit des Einzelnen das höchste Gut auf Erden sein wird. 
+        <h2 style="word-spacing: normal;">Ich habe einen Traum: Dass die Würde, Freiheit und individuelle Entfaltungsmöglichkeit des Einzelnen das höchste Gut auf Erden sein wird. 
         Ich bin zu 100% open mindet! Links, Rechts, und alle ähnlichen Begriffe passen zu mir nicht. Bin hochsensibel, sehr feinfühlig und deshalb auch sehr zurückgezogen.
         Wichtige Sachen versuche ich aus der 360grad Perspektive zu analysieren. Und wenn ich denke, das Unrecht sei zu groß, gehe ich manchmal auch alleine dagegen an. 
         Hier ein Interview der Stuttgarter Zeitung über mich:</h2>  
@@ -76,6 +76,7 @@
           An- und Abwasseranschlüsse sowie Stromanschlüsse können an allen vier Seiten gesetzt werden, sodass auch nebeneinader Container-Wohnungen
           zusammengestellt werden können und genügend Platz auch für Familien garantiert werden kann. Die Container können mit modularen Bausteinen zusammengebaut werden
           und können somit leicht repariert/erneuert werden. Somit bieten solche "Plug & Play Container-Wohnungen" auch eine potenziell sehr hohe Langlebigkeit.
+          Diese Wohnungen sind dann natürlich auch mit Adressen versehen, und können natürlich auch in die Höhe gebaut werden.
         </h3><br>
         <h3>Wie kann man die Würde des Menschen, welche im Grundgesetzt verankert ist, überhaupt beachten, wenn nicht einmal eine sehr bescheidene,
           sehr kleine Wohnung 
